docs/examples/valid/extension/break-continue/continueForLoop.wacc
begin
	for int i = 0, i < 5, i=i+1 do
		if i == 3 then
			continue
		else
			println i
		fi
	done
end
