docs/examples/invalid/semanticErr/extension/forLoop/semanticErrorForLoop.wacc
begin
	for i = i+1, i<2, i=3 do
		i=i+1
	done
end
